tests/expectations/compiler/dynamic_dispatch/dynamic_get_or_use_outside_finalize_fail.out
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:4:24
     |
   4 |         let val: u64 = _dynamic_get_or_use::[u64](prog, net, m, key, 0u64);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
